tooltip alignment, logo aalignment, advanced options, play and stop buttons, Mic, search, input, logo alignment

--- a/chrome-plugin/css/uda-v1.css
+++ b/chrome-plugin/css/uda-v1.css
@@ -371,6 +371,7 @@
     border: none;
     padding: 5px;
     cursor: pointer;
+    height: 30px;
 }
 
 .uda-play-btn:hover {
@@ -393,6 +394,7 @@
     border: none;
     padding: 5px;
     cursor: pointer;
+    height: 30px;
 }
 
 .uda-stop-btn:hover {
